[gd_scene load_steps=4 format=2]

[ext_resource path="res://sprites/icon.png" type="Texture" id=1]
[ext_resource path="res://scripts/map_point.gd" type="Script" id=2]

[sub_resource type="RectangleShape2D" id=1]
extents = Vector2( 32, 32 )

[node name="map_point" type="Area2D"]
script = ExtResource( 2 )

[node name="Line" type="Line2D" parent="."]
z_index = -1
points = PoolVector2Array( 0, 0, 0, 0 )
width = 4.0
default_color = Color( 0, 0, 0, 1 )

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
shape = SubResource( 1 )

[node name="Sprite" type="Sprite" parent="."]
texture = ExtResource( 1 )

[node name="Label" type="Label" parent="."]
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
margin_left = -20.0
margin_top = -66.0
margin_right = 20.0
margin_bottom = -52.0
text = "There"
align = 1
valign = 1
__meta__ = {
"_edit_use_anchors_": false
}
[connection signal="input_event" from="." to="." method="_on_map_tile_input_event"]
[connection signal="mouse_entered" from="." to="." method="_on_map_tile_mouse_entered"]
[connection signal="mouse_exited" from="." to="." method="_on_map_tile_mouse_exited"]
